--- a/assets/css/combo.css
+++ b/assets/css/combo.css
@@ -110,7 +110,6 @@ hr {
 
 .container h1, .container h2, .container h3, .container h4 {
   margin-bottom: 20px;
-  text-align: center;
   padding: 0 4%;
 }
 .container p, .container ol, .container ul {
@@ -351,6 +350,10 @@ nav ul li:hover, nav ul li.active {
   nav ul li {
     min-width:60px;
     line-height:40px;
+  }
+
+  .section:first-of-type {
+      padding-top: 80px;
   }
 }
 
